# libfwsi

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfwsi-wiki.ini  libfwsi.ini  libfwsi.pc.in  libfwsi.spec.in  runtests.sh  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
include/: Makefile.am  libfwsi.h.in
include/libfwsi/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfwsi/: Makefile.am  libfwsi.c  libfwsi.rc.in  libfwsi_acronis_tib_file_values.c  libfwsi_acronis_tib_file_values.h  libfwsi_cdburn_values.c  libfwsi_cdburn_values.h  libfwsi_codepage.h  libfwsi_compressed_folder.c  libfwsi_compressed_folder.h  libfwsi_compressed_folder_values.c  libfwsi_compressed_folder_values.h  libfwsi_control_panel_category.c  libfwsi_control_panel_category.h  libfwsi_control_panel_category_values.c  libfwsi_control_panel_category_values.h  libfwsi_control_panel_cpl_file_values.c  libfwsi_control_panel_cpl_file_values.h  libfwsi_control_panel_identifier.c  libfwsi_control_panel_identifier.h  libfwsi_control_panel_item.c  libfwsi_control_panel_item.h  libfwsi_control_panel_item_identifier.c  libfwsi_control_panel_item_identifier.h  libfwsi_control_panel_item_values.c  libfwsi_control_panel_item_values.h  libfwsi_control_panel_values.c  libfwsi_control_panel_values.h  libfwsi_debug.c  libfwsi_debug.h  libfwsi_definitions.h.in  libfwsi_delegate_folder_values.c  libfwsi_delegate_folder_values.h  libfwsi_delegate_values.c  libfwsi_delegate_values.h  libfwsi_error.c  libfwsi_error.h  libfwsi_extension_block.c  libfwsi_extension_block.h  libfwsi_extension_block_0xbeef0000_values.c  (+91 more)
msvscpp/: Makefile.am  libfwsi.sln
msvscpp/fwsi_test_cdburn_values/: fwsi_test_cdburn_values.vcproj
msvscpp/fwsi_test_compressed_folder_values/: fwsi_test_compressed_folder_values.vcproj
msvscpp/fwsi_test_control_panel_category_values/: fwsi_test_control_panel_category_values.vcproj
msvscpp/fwsi_test_control_panel_cpl_file_values/: fwsi_test_control_panel_cpl_file_values.vcproj
msvscpp/fwsi_test_control_panel_item_values/: fwsi_test_control_panel_item_values.vcproj
msvscpp/fwsi_test_control_panel_values/: fwsi_test_control_panel_values.vcproj
msvscpp/fwsi_test_delegate_folder_values/: fwsi_test_delegate_folder_values.vcproj
msvscpp/fwsi_test_delegate_values/: fwsi_test_delegate_values.vcproj
msvscpp/fwsi_test_error/: fwsi_test_error.vcproj
msvscpp/fwsi_test_extension_block/: fwsi_test_extension_block.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0000_values/: fwsi_test_extension_block_0xbeef0000_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0001_values/: fwsi_test_extension_block_0xbeef0001_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0003_values/: fwsi_test_extension_block_0xbeef0003_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0005_values/: fwsi_test_extension_block_0xbeef0005_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0006_values/: fwsi_test_extension_block_0xbeef0006_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef000a_values/: fwsi_test_extension_block_0xbeef000a_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0013_values/: fwsi_test_extension_block_0xbeef0013_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0014_values/: fwsi_test_extension_block_0xbeef0014_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0019_values/: fwsi_test_extension_block_0xbeef0019_values.vcproj
msvscpp/fwsi_test_extension_block_0xbeef0025_values/: fwsi_test_extension_block_0xbeef0025_values.vcproj
msvscpp/fwsi_test_file_entry_extension_values/: fwsi_test_file_entry_extension_values.vcproj
msvscpp/libcdata/: libcdata.vcproj
ossfuzz/: Makefile.am  item_fuzzer.cc  item_list_fuzzer.cc  ossfuzz_libfwsi.h
pyfwsi/: Makefile.am  pyfwsi.c  pyfwsi.h  pyfwsi_codepage.c  pyfwsi_codepage.h  pyfwsi_compressed_folder.c  pyfwsi_compressed_folder.h  pyfwsi_control_panel_category.c  pyfwsi_control_panel_category.h  pyfwsi_control_panel_item.c  pyfwsi_control_panel_item.h  pyfwsi_datetime.c  pyfwsi_datetime.h  pyfwsi_error.c  pyfwsi_error.h  pyfwsi_extension_block.c  pyfwsi_extension_block.h  pyfwsi_extension_blocks.c  pyfwsi_extension_blocks.h  pyfwsi_file_entry.c  pyfwsi_file_entry.h  pyfwsi_file_entry_extension.c  pyfwsi_file_entry_extension.h  pyfwsi_guid.c  pyfwsi_guid.h  pyfwsi_integer.c  pyfwsi_integer.h  pyfwsi_item.c  pyfwsi_item.h  pyfwsi_item_list.c  pyfwsi_item_list.h  pyfwsi_items.c  pyfwsi_items.h  pyfwsi_libcerror.h  pyfwsi_libclocale.h  pyfwsi_libcstring.h  pyfwsi_libfguid.h  pyfwsi_libfwsi.h  pyfwsi_libuna.h  pyfwsi_network_location.c  (+12 more)
pyfwsi-python2/: Makefile.am
tests/: Makefile.am  fwsi_test_cdburn_values.c  fwsi_test_compressed_folder_values.c  fwsi_test_control_panel_category_values.c  fwsi_test_control_panel_cpl_file_values.c  fwsi_test_control_panel_item_values.c  fwsi_test_control_panel_values.c  fwsi_test_delegate_folder_values.c  fwsi_test_delegate_values.c  fwsi_test_error.c  fwsi_test_extension_block.c  fwsi_test_extension_block_0xbeef0000_values.c  fwsi_test_extension_block_0xbeef0001_values.c  fwsi_test_extension_block_0xbeef0003_values.c  fwsi_test_extension_block_0xbeef0005_values.c  fwsi_test_extension_block_0xbeef0006_values.c  fwsi_test_extension_block_0xbeef000a_values.c  fwsi_test_extension_block_0xbeef0013_values.c  fwsi_test_extension_block_0xbeef0014_values.c  fwsi_test_extension_block_0xbeef0019_values.c  fwsi_test_extension_block_0xbeef0025_values.c  fwsi_test_file_entry_extension_values.c  fwsi_test_file_entry_values.c  fwsi_test_game_folder_values.c  fwsi_test_get_version.c  fwsi_test_item.c  fwsi_test_item_list.c  fwsi_test_item_list_copy_from_byte_stream.c  fwsi_test_libcerror.h  fwsi_test_libcfile.h  fwsi_test_libcstring.h  fwsi_test_libfwsi.h  fwsi_test_macros.h  fwsi_test_memory.c  fwsi_test_memory.h  fwsi_test_mtp_file_entry_values.c  fwsi_test_mtp_volume_values.c  fwsi_test_network_location_values.c  fwsi_test_notify.c  fwsi_test_root_folder_values.c  (+26 more)
(+72 files in other folders)
