include_HEADERS = \
	libfwsi.h

pkginclude_HEADERS = \
	libfwsi/codepage.h \
	libfwsi/definitions.h \
	libfwsi/error.h \
	libfwsi/extern.h \
	libfwsi/features.h \
	libfwsi/types.h

EXTRA_DIST = \
	libfwsi.h.in \
	libfwsi/definitions.h.in \
	libfwsi/features.h.in \
	libfwsi/types.h.in

DISTCLEANFILES = \
	libfwsi.h \
	libfwsi/definitions.h \
	libfwsi/features.h \
	libfwsi/types.h \
	Makefile \
	Makefile.in

