MSVSCPP_FILES = \
	fwsi_test_error/fwsi_test_error.vcproj \
	fwsi_test_extension_block/fwsi_test_extension_block.vcproj \
	fwsi_test_item/fwsi_test_item.vcproj \
	fwsi_test_item_list/fwsi_test_item_list.vcproj \
	fwsi_test_item_list_copy_from_byte_stream/fwsi_test_item_list_copy_from_byte_stream.vcproj \
	fwsi_test_support/fwsi_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	libuna/libuna.vcproj \
	pyfwsi/pyfwsi.vcproj \
	libfwsi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

