MSVSCPP_FILES = \
	fwsi_test_cdburn_values/fwsi_test_cdburn_values.vcproj \
	fwsi_test_compressed_folder_values/fwsi_test_compressed_folder_values.vcproj \
	fwsi_test_control_panel_category_values/fwsi_test_control_panel_category_values.vcproj \
	fwsi_test_control_panel_cpl_file_values/fwsi_test_control_panel_cpl_file_values.vcproj \
	fwsi_test_control_panel_values/fwsi_test_control_panel_values.vcproj \
	fwsi_test_delegate_values/fwsi_test_delegate_values.vcproj \
	fwsi_test_error/fwsi_test_error.vcproj \
	fwsi_test_extension_block/fwsi_test_extension_block.vcproj \
	fwsi_test_extension_block_0xbeef0000_values/fwsi_test_extension_block_0xbeef0000_values.vcproj \
	fwsi_test_extension_block_0xbeef0001_values/fwsi_test_extension_block_0xbeef0001_values.vcproj \
	fwsi_test_extension_block_0xbeef0003_values/fwsi_test_extension_block_0xbeef0003_values.vcproj \
	fwsi_test_extension_block_0xbeef0005_values/fwsi_test_extension_block_0xbeef0005_values.vcproj \
	fwsi_test_extension_block_0xbeef0006_values/fwsi_test_extension_block_0xbeef0006_values.vcproj \
	fwsi_test_extension_block_0xbeef000a_values/fwsi_test_extension_block_0xbeef000a_values.vcproj \
	fwsi_test_extension_block_0xbeef0013_values/fwsi_test_extension_block_0xbeef0013_values.vcproj \
	fwsi_test_extension_block_0xbeef0014_values/fwsi_test_extension_block_0xbeef0014_values.vcproj \
	fwsi_test_extension_block_0xbeef0019_values/fwsi_test_extension_block_0xbeef0019_values.vcproj \
	fwsi_test_extension_block_0xbeef0025_values/fwsi_test_extension_block_0xbeef0025_values.vcproj \
	fwsi_test_file_entry_extension_values/fwsi_test_file_entry_extension_values.vcproj \
	fwsi_test_file_entry_values/fwsi_test_file_entry_values.vcproj \
	fwsi_test_game_folder_values/fwsi_test_game_folder_values.vcproj \
	fwsi_test_item/fwsi_test_item.vcproj \
	fwsi_test_item_list/fwsi_test_item_list.vcproj \
	fwsi_test_mtp_file_entry_values/fwsi_test_mtp_file_entry_values.vcproj \
	fwsi_test_mtp_volume_values/fwsi_test_mtp_volume_values.vcproj \
	fwsi_test_network_location_values/fwsi_test_network_location_values.vcproj \
	fwsi_test_root_folder_values/fwsi_test_root_folder_values.vcproj \
	fwsi_test_support/fwsi_test_support.vcproj \
	fwsi_test_unknown_0x74_values/fwsi_test_unknown_0x74_values.vcproj \
	fwsi_test_uri_sub_values/fwsi_test_uri_sub_values.vcproj \
	fwsi_test_uri_values/fwsi_test_uri_values.vcproj \
	fwsi_test_users_property_view_values/fwsi_test_users_property_view_values.vcproj \
	fwsi_test_volume_values/fwsi_test_volume_values.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	libuna/libuna.vcproj \
	pyfwsi/pyfwsi.vcproj \
	libfwsi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

